[project]
name = "repl-nix-pastebuddy"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.0.3",
    "flask-sqlalchemy>=3.1.1",
    "psycopg2-binary>=2.9.10",
    "eventlet>=0.37.0",
    "flask-socketio>=5.4.1",
    "python-socketio",
    "flask-mail>=0.10.0",
    "sqlalchemy>=2.0.36",
    "werkzeug>=3.0.6",
    "flask-talisman>=1.1.0",
]
